<resources>
    <string name="app_name">Blue Mind</string>
    <string name="pref_previously_started">previouslyStarted</string>

    <!-- Challenge Activity -->
    <string name="heyuser">Hey User</string>
    <string name="itsshowtime">It\'s Show Time!</string>
    <string name="yourActivities">Your Activities</string>
    <string name="activityone">Go For a 10 Minutes Bike Ride</string>
    <string name="activitytwo">Go Outside, Join Any Group And Have Conversation</string>
    <string name="activitythree">Visit a Nearby Park And Take Some Photos</string>
    <string name="activityfour">Search Online And Apply For Volunteering</string>
    <string name="activityfive">Visit Any Events And Take Some Photos</string>
    <string name="complete">Complete</string>
    <string name="view">View</string>
    <string name="viewTitle">Bike Ride Activities</string>
    <string name="viewDescription">Description</string>
    <string name="viewRequirements">Requirements</string>
    <string name="uploadPictures"> • Upload Pictures</string>
    <string name="uploadActivityData"> • Upload Activity Data</string>
    <string name="uploadStepCount"> • Upload Step Count</string>
    <string name="uploadMileageCount"> • Upload Mileage Count</string>
    <string name="otherRequirements"> • Other Requirements</string>
    <string name="submit">What you did?</string>
    <string name="howwas">How was the activity?</string>
    <string name="uploadaproof">Upload a proof that you have completed the activity?</string>
    <string name="upload">Upload</string>
    <string name="exit">Exit</string>
    <string name="review">Your activity is submitted for reviewing.</string>

    <!-- Log In -->
    <string name="forgotPassword">Forgot Password\?</string>
    <string name="login">Log in</string>
    <string name="createAccount">Create a Blue Mind account</string>
    <string name="or">_______________________ or _______________________</string>

    <!-- Create Account -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordReTry">Confirm Password</string>
    <string name="confirmMessage">Password does not match</string>
    <string name="register">Create an account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="create">Create</string>

    <!-- Identify Me -->
    <string name="identifyme">Identify Me</string>
    <string name="purpose">Purpose of using Blue Mind Application</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="relax">Relax</string>
    <string name="notsure">Not Sure</string>
    <string name="overcomeS">Overcome Stress and Worries</string>
    <string name="clinicallyD">Have you been clinically diagnosed with depression or anxiety disorder\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intenseD">Are you in Intense Depression or Anxiety Issues\? Do you need Immediate Help\?</string>
    <string name="disorderName">Disorder Name</string>
    <string name="thankyouMessage">Thank you for cooperating.\nYou will be redirected to your Home page shortly.</string>
    <string name="doneButton">Done</string>

    <!-- Main Drawer -->
    <string name="challengeCenter">Challenge Center</string>
    <string name="depressionWorkshop">Depression Workshop</string>
    <string name="onlineYoga">Online Yoga</string>
    <string name="breathingExercise">Breathing Exercise</string>
    <string name="professionalHelp">Professional Help</string>
    <string name="meditationCenter">Meditation Center</string>

    <string name="writeamessage">Write a Message</string>
    <string name="book">Make an Appointment</string>
    <string name="selectDate">Select the date for appointment</string>
    <string name="selectTime">Select time for the appointment</string>
    <string name="appointmentUserName">Username: </string>
    <string name="appointmentEmail">Email: </string>
    <string name="appointmentDate">Appointment Date: </string>
    <string name="appointmentTime">Appointment Time: </string>
    <string name="thankYouMessageAppointment">Thank You For Your Booking. We Will Confirm \nAnd Mail You Back.</string>
    <string name="confirm">Confirm</string>
    <string name="chat">Chat</string>
    <string name="Andrew">Andrew Johnson</string>
    <string name="therapist">Therapist</string>
    <string name="description">Andrew has been working as a therapist for past 10 years and has treated thousands of patients throughout his career.</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>
    <string name="login_user_id">User ID</string>
    <string name="login_user_nickname">Nickname</string>
    <string name="login_connect">Connect</string>
    <string name="login_disconnect">Disconnect</string>
    <string name="open_channel_list_participant_count">%1$d participants</string>
    <string name="open_channel_chat_content_desc_profile">Profile image</string>
    <string name="all_group_channels">Group Channels</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>

    <string name="setTimeFrame">Set Time frame for Exercise</string>
    <string name="exerciseTimeFrame">Exercise Time frame</string>
    <string name="semicolon">:</string>
    <string name="setTime">Set</string>
    <string name="inhaleAndExhale">Set Time for Inhale and Exhale</string>
    <string name="continue_after">Continue</string>
    <string name="inhaleExhaleTime">Inhale Exhale Time Frame</string>
    <string name="start">Start</string>
    <string name="inhale">Inhale</string>
    <string name="exhale">Exhale</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="breathing_content2">Pranayama or breathing exercise is essential for healthy \n mind. It helps you relax and makes you calm.</string>
    <string name="breathing_content3">Select Time. Press Start. Practise</string>
    <string name="breathing_content4">Please Plan your Inhale &amp; Exhale \n timeframe.</string>

    <!-- Depression Workshop -->
    <string name="depressionworkshop">Depression Workshop</string>
    <string name="depression_workshop_content1">Get more insight into your issues &amp; read what other\'s \nthink depression &amp; anxiety is.</string>
    <string name="depression_workshop_content2">Beyond Blue. Health Direct. Blue Mind Blog</string>
    <string name="browse">Browse</string>
    <string name="newsFeed">News Feed</string>
    <string name="help">Help</string>
    <string name="beyondBlue">Beyond Blue</string>
    <string name="beyongBlue_content">If you want to get more information please contact \nBeyond Blue.</string>
    <string name="call">Call</string>
    <string name="healthDirect">Health Direct</string>
    <string name="symptomChecker">Symptom Checker</string>
    <string name="blueMindBlog">Blue Mind Blog</string>
    <string name="willBeAvailableSoon">Will be Available Soon</string>

    <!-- Meditation -->
    <string name="meditation_name">Meditation Center</string>
    <string name="meditation_center_content">Sit calm and meditate. You will realize just only this \nsimple practise will make extraordinary changes.</string>
    <string name="meditation_content_2">Post. Calm Audios. Guided Meditation</string>
    <string name="verifiedPost">Verified Posts</string>
    <string name="meditate">Meditate</string>
    <string name="player">Player</string>
    <string name="guidedMeditation">Guided Meditation</string>
    <string name="meditation_last_content">See under professionals profile for therapy options</string>

    <!-- News Feed -->
    <string name="createPost">Create A Post</string>
    <string name="postHint">What do you have to say!</string>
    <string name="attachPV">Click to \nattach Picture or \n Video</string>
    <string name="post">Post</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="urlHint">Insert a link</string>

    <!-- About App -->
    <string name="appName">Blue Mind</string>
    <string name="versionNumber">Version 1.0</string>
</resources>
