<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/challengeCenter"
            android:icon="@drawable/challenges"
            android:title="@string/challengeCenter" />
        <item
            android:id="@+id/depressionWorkshop"
            android:icon="@drawable/depression"
            android:title="@string/depressionWorkshop" />
        <item
            android:id="@+id/onlineYoga"
            android:icon="@drawable/yoga"
            android:title="@string/onlineYoga" />

        <item
            android:id="@+id/breathingExercise"
            android:icon="@drawable/breathing_icon"
            android:title="@string/breathingExercise" />

        <item
            android:id="@+id/professionalHelp"
            android:icon="@drawable/expert_help"
            android:title="@string/professionalHelp" />

        <item
            android:id="@+id/meditationCenter"
            android:icon="@drawable/meditation"
            android:title="@string/meditationCenter" />
    </group>
</menu>