<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textSize="28dp"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="8"
                android:hint="@string/firstName"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:background="@drawable/edittextbackground"
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/firstName"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="8"
                android:hint="@string/lastName"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:layout_marginStart="15dp"
                android:background="@drawable/edittextbackground"
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/lastName"/>
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="14"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:background="@drawable/edittextbackground"
            android:maxLines="1"
            android:inputType="text"
            android:id="@+id/userName"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="8"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:background="@drawable/edittextbackground"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/userPassword"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="8"
                android:hint="@string/passwordReTry"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:layout_marginStart="15dp"
                android:background="@drawable/edittextbackground"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/confirmPassword"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/passwordConfirmMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:text="@string/confirmMessage"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="14"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:background="@drawable/edittextbackground"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:id="@+id/email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="14"
            android:hint="@string/phoneNumber"
            android:imeOptions="actionDone"
            android:textAlignment="center"
            android:background="@drawable/edittextbackground"
            android:maxLines="1"
            android:inputType="phone"
            android:id="@+id/phoneNumber"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/createButton"
            android:text="@string/create"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>