<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/app_theme_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/bluemind"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/userNameEditText"
            android:background="@drawable/edittextbackground"
            android:ems="13"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:id="@+id/userPasswordEditText"
            android:background="@drawable/edittextbackground"
            android:maxLines="1"
            android:inputType="textPassword"
            android:ems="13"
            android:hint="@string/password"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:text="@string/forgotPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="13"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:background="@drawable/rounded_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="13"
            android:background="@drawable/rounded_button"
            android:id="@+id/createAccount"
            android:text="@string/register"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>