<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/app_theme_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/depressionworkshop"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/depression_workshop_content1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="textEnd"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="textEnd"
            android:text="@string/depression_workshop_content2"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/browse"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/depression_workshop_newsFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/newsFeed"
            android:background="@drawable/rounded_button" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>