<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createPost"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/createPostET"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/edittextbackground"
            android:ems="14"
            android:hint="@string/postHint"
            android:textAlignment="center"
            android:inputType="text"
            android:maxLength="500"
            android:maxLines="5"/>

        <EditText
            android:id="@+id/urlLink"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="14"
            android:background="@drawable/edittextbackground"
            android:hint="@string/urlHint"
            android:textAlignment="center"
            android:maxLines="1"/>

        <Button
            android:id="@+id/attachPictureOrVideo"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachPV" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/image3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <Button
            android:id="@+id/postContents"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>